배포 세팅 추가
